[package]
name = "e2e"
description = "End-to-end Testing for Stylus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
e2e-proc = { path = "../e2e-proc" }
alloy.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["process"] }
regex.workspace = true
once_cell.workspace = true
koba.workspace = true
toml = "0.8.13"
